# matching-app

./: LICENSE  Makefile  PROJECT_STATE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: backend.yml  frontend.yml
backend/: .env.example  .gitignore  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5bc04539f52b_init_schema_manual.py
backend/app/: main.py
backend/app/api/: api.py  deps.py  deps_ws.py
backend/app/api/endpoints/: threads.py  ws.py
backend/app/common/: logging.py
backend/app/core/: config.py
backend/app/db/: redis.py  session.py
backend/app/domain/: enums.py  state_machine.py
backend/app/models/: __init__.py  base.py  embedding.py  match.py  message.py  moderation.py  profile.py  thread.py  user.py
backend/app/schemas/: events.py  message.py
backend/app/services/: pubsub.py  turn_budget.py
backend/slowburn_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_turn_budget.py  test_ws.py
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/scripts/: generate-api.js
frontend/src/: App.tsx
frontend/src/components/: BlurReveal.test.tsx  BlurReveal.tsx  InstallPrompt.tsx  TurnBudget.tsx
frontend/src/lib/: socket.ts
frontend/src/pages/: EnvelopesPage.tsx  LoginPage.tsx  ThreadPage.tsx
infra/: docker-compose.yml
